gtk+2.0 (2.24.28-1) unstable; urgency=medium

  * New upstream release.
  * Refresh patches.
  * Drop obsolete Breaks/Conflicts/Replaces from pre-wheezy.
  * Stop including image data when generating the icon caches since the cache
    files tend to grow rather large and aren't that useful anymore nowadays.
  * Explicitly build the man pages, upstream no longer ships them in the dist
    tarball.
  * Bump Standards-Version to 3.9.6.
  * Don't enable introspection and man pages for udeb build.

 -- Michael Biebl <biebl@debian.org>  Sun, 07 Jun 2015 17:00:08 +0200

gtk+2.0 (2.24.25-3) unstable; urgency=medium

  * 0002-gdk-Fix-GdkWindowFilter-internal-refcounting.patch
    0003-gdkwindow-Fix-event-unref-iteration.patch: Cherry-pick two commits
    from upstream gtk2 branch to fix refcounting errors in light of the
    event_apply_filters change in the previous upload. This was causing
    crashes in some applications, such as Spotify.

 -- Iain Lane <laney@debian.org>  Tue, 03 Mar 2015 18:39:45 +0000

gtk+2.0 (2.24.25-2) unstable; urgency=medium

  * debian/patches/0001-Make-gdk_event_apply_filters-safe-against-changes-in.patch:
    Cherry-pick patch from upstream stable branch to protect
    gdk_event_apply_filters_safe from changes in the filter list (Closes:
    #777142)

 -- Iain Lane <laney@debian.org>  Mon, 02 Mar 2015 09:56:09 +0000

gtk+2.0 (2.24.25-1) unstable; urgency=medium

  * Team upload
  * debian/watch: change http://download.gnome.org to https, uscan doesn't
    like being redirected
  * New upstream release
    - tolerates incorrect use of gtk_main() after initializing threads
      with gtk_init() but before taking the lock with gdk_threads_enter(),
      which has historically worked on GNU systems because glibc's mutexes
      are more permissive than the new implementation in GLib 2.42
      (Closes: #758619, #763602, #763625, #763690, #763735,
      but the affected packages should still use Gdk's threading API properly)