@@ -36,10 +36,12 @@ Build-Depends: debhelper (>= 8.1.3),
                libgirepository1.0-dev (>= 0.9.3),
                quilt,
                gawk,
-               shared-mime-info
-Build-Depends-Indep: docbook-xml,
-                     docbook-utils,
-                     libglib2.0-doc,
+               shared-mime-info,
+               docbook-xml,
+               docbook-xsl,
+               docbook-utils,
+               libxml2-utils
+Build-Depends-Indep: libglib2.0-doc,
                      libatk1.0-doc,
                      libpango1.0-doc,
                      libcairo2-doc
