@@ -7,6 +7,9 @@ gtk+2.0 (2.24.28-1) unstable; urgency=medium
     files tend to grow rather large and aren't that useful anymore nowadays.
   * Explicitly build the man pages, upstream no longer ships them in the dist
     tarball.
+  * Add Build-Depends on docbook-xsl and libxml2-utils and move docbook-xml
+    and docbook-utils from Build-Depends-Indep to Build-Depends. Those are
+    required to build the man pages which are shipped in arch:any packages.
   * Bump Standards-Version to 3.9.6.
   * Don't enable introspection and man pages for udeb build.
 
